--- a/.gitignore
+++ b/.gitignore
@@ -56,3 +56,5 @@ CHAMP_Project/unused_sources/
 Documents/~\$g\.xlsx
 
 ST50_Docs/rapport/ST50__ROMETPierre\.pdf
+
+Documents/~\$cument de prise en main de l'arborescence du projet - Etat de l'art\.docx
